cmake_minimum_required(VERSION 3.26)
project(LeetCode)

set(CMAKE_CXX_STANDARD 20)

add_executable(LeetCode main.cpp
        medium/2.1.cpp
        medium/2.1.h
        easy/1.1.cpp
        easy/1.1.h
        easy/1.2.cpp
        easy/1.2.h
        easy/1.3.cpp
        easy/1.3.h
        easy/1.4.cpp
        easy/1.4.h
        my-module/myfunctions.cpp
        my-module/myfunctions.h
        easy/1.5.cpp
        easy/1.5.h
        easy/1.6.cpp
        easy/1.6.h
        easy/1.7.cpp
        easy/1.7.h
        easy/1.8.cpp
        easy/1.8.h
        easy/1.9.cpp
        easy/1.9.h)
